# building_llm_from_scratch

./: .cursorignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ENV_SETUP.md  README.md  chapter2_test.ipynb  chapter3_test.ipynb  chapter4_test.ipynb  chapter5_test.ipynb  convert_to_txt.py  docker-compose.yml  install_claude_code.sh  main.py  pyproject.toml  requirements.txt  train.py  utils.py
scripts/: container-setup.sh
